plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.berkayb'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.postgresql:postgresql:42.7.4'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.3'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'com.mailersend:java-sdk:1.4.1'
    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.2.5'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // OAUTH2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.5.3'

    // GOOGLE API
    implementation 'com.google.api-client:google-api-client:2.8.0'
    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'


    // Spring Boot test altyapısı
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    // Spring Security test (WithMockUser, MockMvc ile güvenlik)
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
    testImplementation 'org.testcontainers:postgresql:1.21.3'


    // Mockito (unit testlerde mock için)
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    // mockwebsertver test
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'

    testImplementation 'org.awaitility:awaitility:4.2.0'

    // AssertJ (daha okunaklı assertion)
    testImplementation 'org.assertj:assertj-core'

    // test database
    testImplementation 'com.h2database:h2'

    // test rabbitmq
    testImplementation 'org.testcontainers:rabbitmq:1.21.3'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.5.4'



    // Amazon
    implementation platform('software.amazon.awssdk:bom:2.26.23')
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:sts'
    implementation("software.amazon.awssdk:url-connection-client")

    // Template Engine
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.5.3'

    // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.5.5'

    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.5.4'


}

test {
    jvmArgs "-XX:+EnableDynamicAgentLoading"
}


tasks.named('test') {
    useJUnitPlatform()
}